--- a/nodejs-express-project/package.json
+++ b/nodejs-express-project/package.json
@@ -13,7 +13,7 @@
     "rest",
     "api"
   ],
-  "author": "ilyin",
+  "author": "alex0d",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
